--- a/estudiantes.html
+++ b/estudiantes.html
@@ -18,9 +18,11 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="nueva-escuela.html">Nueva Escuela</a>
-                  <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link"  href="index.html">Home</a>
+                    <a class="nav-link" href="nueva-escuela.html">nueva escuela</a>
+                    <a class="nav-link active" aria-current="page" href="estudiantes.html">estudiantxs</a>
+                    <a class="nav-link" href="identidad.html">identidad</a>
+                    <a class="nav-link" href="escuela-tradicional.html">tradicional</a>
                 </div>
               </div>
             </div>
