--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="nueva-escuela.html">Nueva Escuela</a>
-                  <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link active" aria-current="page"  href="index.html">Home</a>
+                    <a class="nav-link" href="nueva-escuela.html">nueva escuela</a>
+                    <a class="nav-link"  href="estudiantes.html">estudiantxs</a>
+                    <a class="nav-link"  href="identidad.html">identidad</a>
+                    <a class="nav-link" href="escuela-tradicional.html">tradicional</a>
                 </div>
               </div>
             </div>
@@ -28,8 +30,13 @@
     </header>
     <main class="main-index container-fluid">
         <h1 class="titulo-index">Taller de Educación, Tecnología y Medios</h1>
+
+        <div class="botones-index">
         <a class="btn-index btn btn-primary" href="escuela-tradicional.html" role="button">Educación tradicional</a>
+
+        
         <a class="btn-index btn btn-danger" href="nueva-escuela.html" role="button">H4c14 un4 nu3v4 3duc4cIón</a>
+        </div>
 
     </main>
     <footer>
