--- a/nueva-escuela.html
+++ b/nueva-escuela.html
@@ -25,45 +25,40 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link" href="index.html">Home</a>
-                        <a class="nav-link active" aria-current="page" href=" nueva-escuela.html">Nueva Escuela</a>
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link active" aria-current="page" href="nueva-escuela.html">nueva escuela</a>
+                        <a class="nav-link" href="estudiantes.html">estudiantxs</a>
+                        <a class="nav-link" href="identidad.html">identidad</a>
+                        <a class="nav-link" href="escuela-tradicional.html">tradicional</a>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
     <main class="container-fluid main-nueva">
-        <div class="row main-nueva__row1">
-            <div class="col-12 col-1-btn">
-                <a class="btn-index btn btn-danger" href="escuela-tradicional.html" role="button">Medios</a>
-            </div>
-        </div>
-        <div class="row  main-nueva__row2">
+
+        <div class="row" style="padding-top: 200px;">
             <div class="col-4 col-2-btn">
                 <a class="btn-index btn btn-danger" href="estudiantes.html" role="button">estudiantxs</a>
             </div>
             <div class="col-4 col-2-btn">
-                <a class="btn-index btn btn-danger" href="escuela-tradicional.html" role="button">¿ ?</a>
+                <h2>En construcción de su</h2>
             </div>
-            <div class="col-4 col-2-btn">
-                <a class="btn-index btn btn-danger" href="escuela-tradicional.html" role="button">Profesores</a>
-            </div>
-        </div>
-        </div>
-        <div class="row  main-nueva__row">
-            <div class="col-12 col-1-btn"><a class="btn-index btn btn-danger" href="escuela-tradicional.html"
-                    role="button">Educación</a></div>
-        </div>
 
+            <div class="col-4 col-1-btn"><a class="btn-index btn btn-danger" href="escuela-tradicional.html"
+                    role="button">identidad</a></div>
+
+        </div>
         <div class="row">
 
             <div class="col-12 alert">
 
                 <div class="alert alert-danger div-alert" role="alert">
-                    La nueva educación está inmersa en un mundo embebido en una red constante de información que a pesar de
-                    desplegarse en innumerables formatos siempre es construida en textos. Esta serie de páginas se
-                    construye en textos dentro de un <a href="https://es.wikipedia.org/wiki/HTML">formato
-                        determinado</a> por miles de textos que se interconectan entre sí.
+                    <p>"La página nos domina y nos conduce. Los innovadores de todo pelambre buscan el nuevo libro
+                        electrónico, nientras que el electrónico no se ha librado aún del libro, aunque él implique otra
+                        cosa diferente al libro, una cosa bien distinta al formato transhistórico de la página. La
+                        pantalla la reproduce"
+                        - Michael Serres
+                    </p>
                 </div>
             </div>
         </div>
