--- a/nueva-escuela.html
+++ b/nueva-escuela.html
@@ -44,7 +44,7 @@
                 <h2>En construcción de su</h2>
             </div>
 
-            <div class="col-4 col-1-btn"><a class="btn-index btn btn-danger" href="escuela-tradicional.html"
+            <div class="col-4 col-1-btn"><a class="btn-index btn btn-danger" href="identidad.html"
                     role="button">identidad</a></div>
 
         </div>
