--- a/identidad.html
+++ b/identidad.html
@@ -58,6 +58,28 @@ de los sujetos.</q> <p>Valeria Odetti y Graciela Caldeiro </p>
 
 <iframe style="padding-top: 150px;" width="640" height="480" src="https://www.youtube.com/embed/4KW-C2e_IFI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+
+<h1>Una nueva escuela - una nueva identidad</h1>
+
+<h2>¿Qué se puede apropiar de la manera en lo que lxs estudiantes utilizamos los medios digitales por fuera del aula?</h2>
+
+<p>Mariana Maggio nos propone ciertos modos en qué utilizamos las redes y los cuales se pueden aprovechar.</p>
+
+<ul>
+    <li>Búsqueda</li>
+    <li>Encontrarse</li>
+    <li>Compartir</li>
+    <li>Registrar</li>
+    <li>Organizarse</li>
+    <li>Evaluar</li>
+</ul>
+
+
+
+
+
+
+
 </div>
     </main>
 
