--- a/identidad.html
+++ b/identidad.html
@@ -61,17 +61,31 @@ de los sujetos.</q> <p>Valeria Odetti y Graciela Caldeiro </p>
 
 <h1>Una nueva escuela - una nueva identidad</h1>
 
-<h2>¿Qué se puede apropiar de la manera en lo que lxs estudiantes utilizamos los medios digitales por fuera del aula?</h2>
+<div style="background-color: black;">
 
-<p>Mariana Maggio nos propone ciertos modos en qué utilizamos las redes y los cuales se pueden aprovechar.</p>
+<h2 style="color: white;">¿Qué se puede apropiar de la manera en lo que lxs estudiantes utilizamos los medios digitales por fuera del aula?</h2>
+
+</div>
 
 <ul>
     <li>Búsqueda</li>
+
+    Aprendamos a buscar en Google y <a href="https://www.estrategiaynegocios.net/empresasymanagement/1257634-330/los-mejores-buscadores-acad%C3%A9micos-para-hallar-fuentes-confiables#:~:text=En%20la%20actualidad%2C%20Google%20es,buscar%20contenido%20espec%C3%ADfico%20y%20especializado.&text=Google%20es%20el%20principal%20buscador%20de%20informaci%C3%B3n%20de%20Internet.,-Sin%20embargo%2C%20si">sitios son más confiables!</a> 
+
+    a
+
+
     <li>Encontrarse</li>
+
+
+
+
     <li>Compartir</li>
     <li>Registrar</li>
     <li>Organizarse</li>
     <li>Evaluar</li>
+
+    
 </ul>
 
 
