--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           </nav>
     </header>
     <main class="main-index container-fluid">
-        <h1 class="titulo-index">Taller de Educación, Tecnología y Medios</h1>
+        <h1 class="titulo-index animate__backInLeft">Taller de Educación, Tecnología y Medios</h1>
 
         <div class="botones-index">
         <a class="btn-index btn btn-primary" href="escuela-tradicional.html" role="button">Educación tradicional</a>
 
-        
+
         <a class="btn-index btn btn-danger" href="nueva-escuela.html" role="button">H4c14 un4 nu3v4 3duc4cIón</a>
         </div>
 
