--- a/escuela-tradicional.html
+++ b/escuela-tradicional.html
@@ -78,7 +78,7 @@
               mundo eran lo que ya no son.</strong> </p>
           </blockquote>
           <figcaption class="blockquote-footer">
-            Paulo Freire<cite title="Source Title"> en Pedagogia del oprimido(1968)</cite>
+            Michel Serres<cite title="Source Title"> Pulgarcita</cite>
           </figcaption>
         </figure>
 
