--- a/estudiantes.html
+++ b/estudiantes.html
@@ -80,7 +80,7 @@
 
 
 
-        <p>Lxs estudiantes tienen acceso a demasiada información y no hay central preocupación por enseñar herramientas o métodos para filtrar ese conocimiento ni tampoco para amigarse con el caudal de datos que albergan las redes. Sin ir mas lejos, <a href="https://www.luismaram.com/25-busquedas-avanzadas-de-google/">¿sabías todas las formas que existen de buscar en google?</a</p>
+        <p>Incluso aquellos estudiantes que cuentan con los disposivitos tienen acceso a demasiada información y no hay central preocupación por enseñar herramientas o métodos para filtrar ese conocimiento ni tampoco para amigarse con el caudal de datos que albergan las redes. Sin ir mas lejos, en todos estos años, <a href="https://www.luismaram.com/25-busquedas-avanzadas-de-google/">¿aprendiste todas las formas que existen de buscar en google?</a</p>
             
              </div>
        
